--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,10 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
+#PERSONAL-----------------------------------------------------------------------------------------
+
+#folders
+MISC
+back
+web/Deprecados/
+authServ/venvAuth
