picture to base64 and then to storage working. TO-DO auto generate name

--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
+    "multer": "^1.2.0",
     "request": "^2.72.0"
   }
 }
