--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,5 @@
 version: "2"
 services:
-  app:
-    build: "./authServ"
-    ports:
-      - 8081:8081
-    depends_on:
-      - db
-    environment:
-      ENV_VAR1: pepe
   db:
     image: mysql:5.7
     ports:
@@ -21,7 +13,24 @@ services:
     build: "./web"
     ports:
       - 8080:8080
-    depends_on:
-      - app
+#    depends_on:
+#     - app
     environment:
       ENV_VAR1: pepito
+
+  storage:
+    build: "./storageService"
+    ports:
+      - 8082:8082
+    depends_on:
+      - fe
+    environment:
+      ENV_VAR1: pepitin
+  app:
+    build: "./authServ"
+    ports:
+      - 8081:8081
+    depends_on:
+      - db
+    environment:
+      ENV_VAR1: pepe
