--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "multer": "^1.2.0",
